# carddav-front

./: Cargo.toml  README.md
.github/workflows/: tests.yml
protocol-walkthrough/: addressbook-home-set.xml  addressbook-props.xml  addressbooks-data-support.xml  addressbooks-props.xml  contacts-address-data.xml  curl.md  current-user-principal.xml  protocol.sh
src/: formatting.rs  lib.rs  main.rs  routes.rs
src/carddav/: addressbooks.rs  mod.rs
templates/: addressbook-data-contenttype.xml.tera  addressbook-data.xml.tera  addressbooks-data-support.xml.tera  addressbooks.xml.tera  principal.xml.tera  root.xml.tera
tests/: integration_tests.rs
tests/fixtures/: addressbooks_resourcetype_displayname.xml  addressbooks_supported_address_data.xml  carddav_response.xml  contacts_getcontenttype_getetag.xml  contacts_getetag_addressdata.xml  principal_response.xml
tests/fixtures/request/: addressbook-home-set.xml  addressbooks-resourcetype-displayname.xml  addressbooks-supported-address-data.xml  contacts-getcontenttype-getetag.xml  contacts-getetag-addressdata.xml  current-user-principal.xml
