[package]
name = "carddav_front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.3"
actix-rt = "2.6.0"
tera = "1"
env_logger = "0.9.0"
quick-xml = "0.22"
simple-xml-builder = "1.1"
roxmltree = "0.14.1"
